# parallel-pg

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
src/: main.py
src/core/: db_conf.py  logger.py  settings.py
src/files/sql/: warehouse.sql
src/reader/: abstract.py  sql_reader.py
src/static/css/: base.css
src/static/js/: base.js
src/templates/: base.html
src/transactions/depends/: depends.py
src/transactions/domain/repos/: repo.py
src/transactions/domain/services/: db_service.py
src/transactions/routers/: router.py  tempate_router.py
src/transactions/schema/: sql_schema.py
